[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/UI/UpgradeView/UpgradeCard.gd" type="Script" id=1]

[node name="UpgradeCard" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -105.0
margin_right = 70.0
margin_bottom = 105.0
rect_pivot_offset = Vector2( 70, 105 )
mouse_filter = 1
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 133.0
margin_bottom = 203.0
mouse_filter = 2

[node name="UpgradeName" type="Label" parent="VBoxContainer"]
margin_right = 126.0
margin_bottom = 19.0
rect_min_size = Vector2( 60, 0 )
mouse_filter = 1
text = "Upgrade"
align = 1
valign = 1
autowrap = true

[connection signal="mouse_entered" from="." to="." method="_on_UpgradeCard_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_UpgradeCard_mouse_exited"]
